bdd_server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-server
  namespace: custom-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-server
  template:
    metadata:
      labels:
        app: query-server
    spec:
      containers:
      - name: query-server
        image: docker.io/library/python:3.9-alpine
        command: ["python3", "/app/bdd_server.py"]
        volumeMounts:
        - name: script-volume
          mountPath: /app
      volumes:
      - name: script-volume
        configMap:
          name: query-server-config
---
apiVersion: v1
kind: Service
metadata:
  name: query-server-service
  namespace: custom-namespace
spec:
  type: ClusterIP
  selector:
    app: query-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
