command_server_html.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-server-html
  namespace: custom-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: command-server-html
  template:
    metadata:
      labels:
        app: command-server-html
    spec:
      containers:
      - name: command-server-html
        image: docker.io/library/python:3.9-alpine
        command: ["python3", "/app/command_server_rendered.py"]
        volumeMounts:
        - name: script-volume
          mountPath: /app
      volumes:
      - name: script-volume
        configMap:
          name: command-server-html-config
---
apiVersion: v1
kind: Service
metadata:
  name: command-server-html-service
  namespace: custom-namespace
spec:
  type: NodePort
  selector:
    app: command-server-html
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30007  # You can change this port to your desired NodePort range
